reduced sliders/colors width to prevent wrapping fixes #11

--- a/src/app/css/modeler.css
+++ b/src/app/css/modeler.css
@@ -133,7 +133,7 @@ body {
 
 .modeler-color-ramp .modeler-color-ramp-color {
   height: 20px;
-  width: 12px;
+  width: 10px;
 }
 
 .mdlrButtons {
